--- a/rules.html
+++ b/rules.html
@@ -1,40 +1,42 @@
 <section class="container section">
   <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
 
-    <h3>Регламент водойми</h3>
-<ul>
-  <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
-  <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
-  <li>Незнання правил водойми <strong>не звільняє від відповідальності</strong>.</li>
-  <li>Порушення регламенту водойми може бути підставою для <strong>попередження, штрафних санкцій або дискваліфікації</strong> за рішенням головного судді та організатора.</li>
-</ul>
+  <h3>Регламент водойми</h3>
+  <ul>
+    <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
+    <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
+    <li>Незнання правил водойми <strong>не звільняє від відповідальності</strong>.</li>
+    <li>Порушення регламенту водойми може бути підставою для <strong>попередження, штрафних санкцій або дискваліфікації</strong> за рішенням головного судді та організатора.</li>
+  </ul>
 
   <p class="form__hint">
     🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
     <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release)</span>
   </p>
+
   <h3>Додатковий івент “Big Fish Total”</h3>
-<p>
-  Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
-  <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
-</p>
+  <p>
+    Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
+    <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
+  </p>
 
   <h3>0. Принципи турніру</h3>
   <ul>
     <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
     <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
     <li>Учасники зобов’язані виконувати вимоги організатора та суддів.</li>
-    <li>Спірні питання вирішує головний суддя</li>
+    <li>Спірні питання вирішує головний суддя.</li>
   </ul>
+
   <h3>Мінімальна кількість команд</h3>
-<ul>
-  <li>Змагання проводяться за умови участі <strong>не менше 12 команд</strong>.</li>
-  <li>У разі, якщо мінімальна кількість команд не набрана, організатор залишає за собою право перенести дату змагань, змінити формат проведення або скасувати змагання.</li>
-</ul>
+  <ul>
+    <li>Змагання проводяться за умови участі <strong>не менше 12 команд</strong>.</li>
+    <li>У разі, якщо мінімальна кількість команд не набрана, організатор залишає за собою право перенести дату змагань, змінити формат проведення або скасувати змагання.</li>
+  </ul>
 
   <h3>1. Формат участі</h3>
   <ul>
-    <li><strong>Командний формат:</strong> 2–3 повноцінних учасники</li>
+    <li><strong>Командний формат:</strong> 2–3 повноцінних учасники.</li>
     <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
     <li>Регламент діє однаково для командного та соло-формату.</li>
   </ul>
@@ -42,7 +44,7 @@
   <h3>2. Організація, сектори та зони</h3>
   <ul>
     <li>Сектори/зони визначаються жеребкуванням.</li>
-    <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер</li>
+    <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер.</li>
     <li><strong>Дистанція лову</strong> оголошується та фіксується <strong>до жеребкування</strong> і є обов’язковою.</li>
     <li>Заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
   </ul>
@@ -53,9 +55,9 @@
     <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
   </ul>
 
-  <h3>4. Правила лову та оснащення </h3>
-  <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
+  <h3>4. Правила лову та оснащення</h3>
   <ul>
+    <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
     <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
 
     <li><strong>Вудилища:</strong>
@@ -84,7 +86,7 @@
 
     <li><strong>Дозволені монтажі:</strong>
       <ul>
-        <li><strong>Класичні коропові</strong> та <strong>флет- Method</strong>.</li>
+        <li><strong>Класичні коропові</strong> та <strong>флет-Method</strong>.</li>
         <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
         <li>Флет — лише у безпечному виконанні.</li>
       </ul>
@@ -106,13 +108,13 @@
     <li><strong>Кобра:</strong> дозволена цілодобово.</li>
     <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
     <li><strong>Жива насадка — заборонена!!!</strong></li>
-
     <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
+  </ul>
 
   <h3>6. Порядок зважування та гуманне поводження</h3>
   <ul>
     <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
-    <li>Команда зобов’язана: витягнути мішок → ТА ДОПОМОГТИ СУДДІ У ЗВАЖУВАННІ<strong>відпустити рибу </strong>.</li>
+    <li>Команда зобов’язана: витягнути мішок та допомогти судді у зважуванні, після чого <strong>відпустити рибу</strong>.</li>
     <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
 
     <li><strong>Обов’язкове оснащення:</strong>
@@ -128,12 +130,17 @@
     <li>Фото/зважування без судді — забороняється.</li>
   </ul>
 
-  <<h3>Правило та Fair play</h3>
-<ul>
-  <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
-  <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
-  <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
-<ul>
+  <h3>Гості та глядачі</h3>
+  <ul>
+    <li><strong>Знаходження гостей і глядачів у зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
+  </ul>
+
+  <h3>Правила та Fair play</h3>
+  <ul>
+    <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
+    <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
+    <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
+  </ul>
 
   <h3>8. Дисципліна та штрафи</h3>
   <ul>
@@ -165,7 +172,7 @@
 
   <h3>10. Фінансові умови</h3>
   <ul>
-    <li>Відмова від участі </strong> — внесок <strong>не повертається</strong>.</li>
+    <li>Відмова від участі — внесок <strong>не повертається</strong>.</li>
   </ul>
 
   <h3>11. Призи</h3>
