--- a/rules.html
+++ b/rules.html
@@ -86,7 +86,7 @@
 
     <li><strong>Дозволені монтажі:</strong>
       <ul>
-        <li><strong>Класичні коропові</strong> та <strong>флет-Method</strong>.</li>
+        <li><strong>Класичні коропові</strong> та <strong>флет- Method</strong>.</li>
         <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
         <li>Флет — лише у безпечному виконанні.</li>
       </ul>
@@ -132,7 +132,7 @@
 
   <h3>Гості та глядачі</h3>
   <ul>
-    <li><strong>Знаходження гостей і глядачів у зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
+    <li><strong>Знаходження гостей і глядачів в зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
   </ul>
 
   <h3>Правила та Fair play</h3>
