--- a/rules.html
+++ b/rules.html
@@ -1,190 +1,199 @@
-<section class="container section">
-  <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
+<body class="rules-page">
 
-  <h3>Регламент водойми</h3>
-  <ul>
-    <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
-    <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
-    <li>Незнання правил водойми <strong>не звільняє від відповідальності</strong>.</li>
-    <li>Порушення регламенту водойми може бути підставою для <strong>попередження, штрафних санкцій або дискваліфікації</strong> за рішенням головного судді та організатора.</li>
-  </ul>
+<main class="main">
+  <section class="container section">
+    <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
 
-  <p class="form__hint">
-    🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
-    <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release)</span>
-  </p>
+    <h3>Регламент водойми</h3>
+    <ul>
+      <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
+      <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
+      <li>Незнання правил водойми <strong>не звільняє від відповідальності</strong>.</li>
+      <li>Порушення регламенту водойми може бути підставою для <strong>попередження, штрафних санкцій або дискваліфікації</strong> за рішенням головного судді та організатора.</li>
+    </ul>
 
-  <h3>Додатковий івент “Big Fish Total”</h3>
-  <p>
-    Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
-    <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
-  </p>
+    <p class="form__hint">
+      🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
+      <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release</span>
+    </p>
 
-  <h3>0. Принципи турніру</h3>
-  <ul>
-    <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
-    <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
-    <li>Учасники зобов’язані виконувати вимоги організатора та суддів.</li>
-    <li>Спірні питання вирішує головний суддя.</li>
-  </ul>
+    <h3>Додатковий івент “Big Fish Total”</h3>
+    <p>
+      Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
+      <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
+    </p>
 
-  <h3>Мінімальна кількість команд</h3>
-  <ul>
-    <li>Змагання проводяться за умови участі <strong>не менше 12 команд</strong>.</li>
-    <li>У разі, якщо мінімальна кількість команд не набрана, організатор залишає за собою право перенести дату змагань, змінити формат проведення або скасувати змагання.</li>
-  </ul>
+    <h3>0. Принципи турніру</h3>
+    <ul>
+      <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
+      <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
+      <li>Учасники зобов’язані виконувати вимоги організатора та суддів.</li>
+      <li>Спірні питання вирішує головний суддя.</li>
+    </ul>
 
-  <h3>1. Формат участі</h3>
-  <ul>
-    <li><strong>Командний формат:</strong> 2–3 повноцінних учасники.</li>
-    <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
-    <li>Регламент діє однаково для командного та соло-формату.</li>
-  </ul>
+    <h3>Мінімальна кількість команд</h3>
+    <ul>
+      <li>Змагання проводяться за умови участі <strong>не менше 12 команд</strong>.</li>
+      <li>У разі, якщо мінімальна кількість команд не набрана, організатор залишає за собою право перенести дату змагань, змінити формат проведення або скасувати змагання.</li>
+    </ul>
 
-  <h3>2. Організація, сектори та зони</h3>
-  <ul>
-    <li>Сектори/зони визначаються жеребкуванням.</li>
-    <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер.</li>
-    <li><strong>Дистанція лову</strong> оголошується та фіксується <strong>до жеребкування</strong> і є обов’язковою.</li>
-    <li>Заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
-  </ul>
+    <h3>1. Формат участі</h3>
+    <ul>
+      <li><strong>Командний формат:</strong> 2–3 повноцінних учасники.</li>
+      <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
+      <li>Регламент діє однаково для командного та соло-формату.</li>
+    </ul>
 
-  <h3>3. Залік і визначення переможців</h3>
-  <ul>
-    <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
-    <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
-  </ul>
+    <h3>2. Організація, сектори та зони</h3>
+    <ul>
+      <li>Сектори/зони визначаються жеребкуванням.</li>
+      <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер.</li>
+      <li><strong>Дистанція лову</strong> оголошується та фіксується <strong>до жеребкування</strong> і є обов’язковою.</li>
+      <li>Заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
+    </ul>
 
-  <h3>4. Правила лову та оснащення</h3>
-  <ul>
-    <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
-    <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
+    <h3>3. Залік і визначення переможців</h3>
+    <ul>
+      <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
+      <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
+    </ul>
 
-    <li><strong>Вудилища:</strong>
-      <ul>
-        <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
-        <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
-        <li>Монтаж-оснастка — <strong>не більше 1 гачка</strong>.</li>
-        <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
-      </ul>
-    </li>
+    <h3>4. Правила лову та оснащення</h3>
+    <ul>
+      <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
+      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
 
-    <li><strong>Маркеріння:</strong>
-      <ul>
-        <li>Дозволено використання маркера <strong>не виймаючи 2 робочих</strong>.</li>
-        <li>Маркеріння дозволено після заїзду у сектор та до фінішу.</li>
-      </ul>
-    </li>
+      <li><strong>Вудилища:</strong>
+        <ul>
+          <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
+          <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
+          <li>Монтаж-оснастка — <strong>не більше 1 гачка</strong>.</li>
+          <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
+        </ul>
+      </li>
 
-    <li><strong>Ліска та шок-лідер:</strong>
-      <ul>
-        <li>Основна волосінь — <strong>не менше 0.23 мм</strong>.</li>
-        <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
-        <li><strong>Шнур — заборонено.</strong></li>
-      </ul>
-    </li>
+      <li><strong>Маркеріння:</strong>
+        <ul>
+          <li>Дозволено використання маркера <strong>не виймаючи 2 робочих</strong>.</li>
+          <li>Маркеріння дозволено після заїзду у сектор та до фінішу.</li>
+        </ul>
+      </li>
 
-    <li><strong>Дозволені монтажі:</strong>
-      <ul>
-        <li><strong>Класичні коропові</strong> та <strong>флет- Method</strong>.</li>
-        <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
-        <li>Флет — лише у безпечному виконанні.</li>
-      </ul>
-    </li>
+      <li><strong>Ліска та шок-лідер:</strong>
+        <ul>
+          <li>Основна волосінь — <strong>не менше 0.23 мм</strong>.</li>
+          <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
+          <li><strong>Шнур — заборонено.</strong></li>
+        </ul>
+      </li>
 
-    <li><strong>Заборонено:</strong>
-      <ul>
-        <li>Кораблики/човни та будь-які плавзасоби для завозу оснасток і прикорму.</li>
-        <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong>1 учаснику</strong> для <strong>підсачування риби</strong>.</li>
-      </ul>
-    </li>
+      <li><strong>Дозволені монтажі:</strong>
+        <ul>
+          <li><strong>Класичні коропові</strong> та <strong>флет-Method</strong>.</li>
+          <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
+          <li>Флет — лише у безпечному виконанні.</li>
+        </ul>
+      </li>
 
-    <li><strong>Дозволяється зайти у воду перед стартом змагань</strong> для перевірки/очистки сектора від коряг і зачепів.</li>
-  </ul>
+      <li><strong>Заборонено:</strong>
+        <ul>
+          <li>Кораблики/човни та будь-які плавзасоби для завозу оснасток і прикорму.</li>
+          <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong>1 учаснику</strong> для <strong>підсачування риби</strong>.</li>
+        </ul>
+      </li>
 
-  <h3>5. Годування</h3>
-  <ul>
-    <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
-    <li><strong>Кобра:</strong> дозволена цілодобово.</li>
-    <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
-    <li><strong>Жива насадка — заборонена!!!</strong></li>
-    <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
-  </ul>
+      <li><strong>Дозволяється зайти у воду перед стартом змагань</strong> для перевірки/очистки сектора від коряг і зачепів.</li>
+    </ul>
 
-  <h3>6. Порядок зважування та гуманне поводження</h3>
-  <ul>
-    <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
-    <li>Команда зобов’язана: витягнути мішок та допомогти судді у зважуванні, після чого <strong>відпустити рибу</strong>.</li>
-    <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
+    <h3>5. Годування</h3>
+    <ul>
+      <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
+      <li><strong>Кобра:</strong> дозволена цілодобово.</li>
+      <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
+      <li><strong>Жива насадка — заборонена!!!</strong></li>
+      <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
+    </ul>
 
-    <li><strong>Обов’язкове оснащення:</strong>
-      <ul>
-        <li>Антисептик.</li>
-        <li><strong>10 коропових мішків</strong> (мінімум).</li>
-        <li>Короповий мат: якщо на водоймі матів немає — мат обов’язковий у команди.</li>
-      </ul>
-    </li>
+    <h3>6. Порядок зважування та гуманне поводження</h3>
+    <ul>
+      <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
+      <li>Команда зобов’язана: витягнути мішок та допомогти судді у зважуванні, після чого <strong>відпустити рибу</strong>.</li>
+      <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
 
-    <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
-    <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
-    <li>Фото/зважування без судді — забороняється.</li>
-  </ul>
+      <li><strong>Обов’язкове оснащення:</strong>
+        <ul>
+          <li>Антисептик.</li>
+          <li><strong>10 коропових мішків</strong> (мінімум).</li>
+          <li>Короповий мат: якщо на водоймі матів немає — мат обов’язковий у команди.</li>
+        </ul>
+      </li>
 
-  <h3>Гості та глядачі</h3>
-  <ul>
-    <li><strong>Знаходження гостей і глядачів в зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
-  </ul>
+      <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
+      <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
+      <li>Фото/зважування без судді — забороняється.</li>
+    </ul>
 
-  <h3>Правила та Fair play</h3>
-  <ul>
-    <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
-    <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
-    <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
-  </ul>
+    <h3>Гості та глядачі</h3>
+    <ul>
+      <li><strong>Знаходження гостей і глядачів в зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
+    </ul>
 
-  <h3>8. Дисципліна та штрафи</h3>
-  <ul>
-    <li>Тиша, порядок та чистота у секторі — обов’язкові.</li>
-    <li>Заборонені конфлікти, агресія, маніпуляції, приховування риби під час зважування.</li>
-    <li>Порушення етики — жовта або червона картка. Дві жовті = дискваліфікація.</li>
-  </ul>
+    <h3>Правила та Fair play</h3>
+    <ul>
+      <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
+      <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
+      <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
+    </ul>
 
-  <table class="table">
-    <thead>
-      <tr><th>Порушення</th><th>Покарання</th></tr>
-    </thead>
-    <tbody>
-      <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
-      <tr><td>Ловля/годування за межами свого сектору</td><td>Жовта картка</td></tr>
-      <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
-      <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
-      <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
-      <tr><td>Фото/зважування без судді</td><td>Жовта</td></tr>
-    </tbody>
-  </table>
+    <h3>8. Дисципліна та штрафи</h3>
+    <ul>
+      <li>Тиша, порядок та чистота у секторі — обов’язкові.</li>
+      <li>Заборонені конфлікти, агресія, маніпуляції, приховування риби під час зважування.</li>
+      <li>Порушення етики — жовта або червона картка. Дві жовті = дискваліфікація.</li>
+    </ul>
 
-  <h3>9. Протести</h3>
-  <ul>
-    <li>Протест подається головному судді протягом <strong>30 хвилин</strong> після інциденту.</li>
-    <li>Без доказів протест може бути не розглянутий.</li>
-    <li>Рішення суддів — остаточне.</li>
-  </ul>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Порушення</th>
+          <th>Покарання</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
+        <tr><td>Ловля/годування за межами свого сектору</td><td>Жовта картка</td></tr>
+        <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
+        <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
+        <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
+        <tr><td>Фото/зважування без судді</td><td>Жовта</td></tr>
+      </tbody>
+    </table>
 
-  <h3>10. Фінансові умови</h3>
-  <ul>
-    <li>Відмова від участі — внесок <strong>не повертається</strong>.</li>
-  </ul>
+    <h3>9. Протести</h3>
+    <ul>
+      <li>Протест подається головному судді протягом <strong>30 хвилин</strong> після інциденту.</li>
+      <li>Без доказів протест може бути не розглянутий.</li>
+      <li>Рішення суддів — остаточне.</li>
+    </ul>
 
-  <h3>11. Призи</h3>
-  <ul>
-    <li>Призовий фонд формується організаторами та спонсорами.</li>
-    <li>Номінації та розподіл призів оголошуються окремо для кожного етапу.</li>
-  </ul>
+    <h3>10. Фінансові умови</h3>
+    <ul>
+      <li>Відмова від участі — внесок <strong>не повертається</strong>.</li>
+    </ul>
 
-  <h3>12. Контакти</h3>
-  <p>
-    Для участі або уточнення інформації:<br>
-    📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
-    📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
-  </p>
-</section>
+    <h3>11. Призи</h3>
+    <ul>
+      <li>Призовий фонд формується організаторами та спонсорами.</li>
+      <li>Номінації та розподіл призів оголошуються окремо для кожного етапу.</li>
+    </ul>
+
+    <h3>12. Контакти</h3>
+    <p>
+      Для участі або уточнення інформації:<br>
+      📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
+      📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
+    </p>
+  </section>
+</main>
+
+</body>
