--- a/rules.html
+++ b/rules.html
@@ -50,7 +50,7 @@
       <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release</span>
     </p>
 
-    <h3>Додатковий івент “Big Fish Total”</h3>
+    <h3>Додаткова організація Джек-потів “Big Fish Total”</h3>
     <p>
       Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
       <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
@@ -99,7 +99,7 @@
       <li><strong>Вудилища:</strong>
         <ul>
           <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
-          <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
+          <li><strong>Одночасно в воді — не більше 2 робочих вудилищ.</strong></li>
           <li>Монтаж-оснастка — <strong>не більше 1 гачка</strong>.</li>
           <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
         </ul>
@@ -107,7 +107,7 @@
 
       <li><strong>Маркеріння:</strong>
         <ul>
-          <li>Дозволено використання маркера <strong>не виймаючи 2 робочих</strong>.</li>
+          <li>Дозволено використання маркера <strong>не виймаючи 2 робочих удилищ</strong>.</li>
           <li>Маркеріння дозволено після заїзду у сектор та до фінішу.</li>
         </ul>
       </li>
@@ -116,7 +116,7 @@
         <ul>
           <li>Основна волосінь — <strong>не менше 0.23 мм</strong>.</li>
           <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
-          <li><strong>Шнур — заборонено.</strong></li>
+          <li>Шнур — <strong>Заборонено використання в якості основної волосіні</strong>.</li>
         </ul>
       </li>
 
@@ -156,7 +156,7 @@
         <ul>
           <li>Антисептик.</li>
           <li><strong>10 коропових мішків</strong> (мінімум).</li>
-          <li>Короповий мат: якщо на водоймі матів немає — мат обов’язковий у команди.</li>
+          <li>Короповий мат: якщо на водоймі матів немає — мат обов'язковий</li>
         </ul>
       </li>
       <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
@@ -215,7 +215,7 @@
     <h3>11. Призи</h3>
     <ul>
       <li>Призовий фонд формується організаторами та спонсорами.</li>
-      <li>Номінації та розподіл призів оголошуються окремо для кожного етапу.</li>
+      <li>Номінації та розподіл призів відбувається окремо для кожного етапу.</li>
     </ul>
 
     <h3>12. Контакти</h3>
