--- a/rules.html
+++ b/rules.html
@@ -50,7 +50,7 @@
       <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release</span>
     </p>
 
-    <h3>Додаткова організація Джек-потів “Big Fish Total”</h3>
+    <h3>Організація Джек-потів “Big Fish Total”</h3>
     <p>
       Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
       <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
