--- a/index.html
+++ b/index.html
@@ -452,13 +452,13 @@
 
 
     <div class="hero-season-card">
-      <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
+      <h2 class="title-gradient">🏆 Сезон STOLAR CARP </h2>
       <p>
         Слідкуй за всіма етапами та Фіналом в одному місці.
         Архів, Live результати та підсумковий рейтинг команд.
       </p>
-      <a href="events/season-2026.html" class="btn btn--primary btn-lg">
-        Переглянути сезон 2026
+      <a href="events/index.html" class="btn btn--primary btn-lg">
+        Переглянути сезон
       </a>
     </div>
 
