--- a/rating.html
+++ b/rating.html
@@ -6,6 +6,7 @@
   <title>Рейтинг сезону — STOLAR CARP</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
+<script defer src="assets/js/rating_page.js"></script>
   <style>
     :root{
       --line:rgba(255,255,255,.08);
