--- a/rating.html
+++ b/rating.html
@@ -311,15 +311,20 @@
 
     <!-- Преміальний заголовок сезону -->
     <div class="season-rating-head">
-      <div class="kicker title-gradient">СЕЗОН 2026</div>
-      <h1 class="page-title title-gradient">Рейтинг сезону STOLAR CARP </h1>
-      <p class="lead rating-desc">
-        Рейтинг сезону STOLAR CARP — це офіційна підсумкова таблиця результатів команд за всі етапи сезону. Розташування в рейтингу визначається за сумою балів (менше — краще), а при рівності балів вирішальними є загальна вага вилову та Big Fish сезону.
-        У таблиці відображаються місце та бали команди за кожен етап.
-        <b>18 найкращих команд сезону</b> отримують право участі у 
-        <b>Фіналі сезону STOLAR CARP </b>.
-        Саме там кращі з кращих розігрують головний титул року.
-      </p>
+    <div class="kicker title-gradient" id="seasonKicker">СЕЗОН</div>
+<h1 class="page-title title-gradient" id="seasonTitle">Рейтинг сезону STOLAR CARP</h1>
+
+<div class="rating-desc-wrap" id="ratingDescWrap">
+  <p class="lead rating-desc" id="ratingDesc">
+    Рейтинг сезону STOLAR CARP — це офіційна підсумкова таблиця результатів команд за всі етапи сезону. Розташування в рейтингу визначається за сумою балів (менше — краще), а при рівності балів вирішальними є загальна вага вилову та Big Fish сезону.
+    У таблиці відображаються місце та бали команди за кожен етап.
+    <b>18 найкращих команд сезону</b> отримують право участі у 
+    <b>Фіналі сезону STOLAR CARP</b>.
+    Саме там кращі з кращих розігрують головний титул року.
+  </p>
+
+  <button class="btn btn--ghost" type="button" id="descToggle">Детальніше »</button>
+</div>
       <div class="rating-tags">
         <span class="pill">✔ Сукупний рейтинг за всі етапи</span>
         <span class="pill">✔ До фіналу проходить 18 команд</span>
