--- a/cabinet.html
+++ b/cabinet.html
@@ -368,15 +368,15 @@
           </div>
         </div>
       </div>
-      <!-- МОЯ УЧАСТЬ -->
-<div class="card">
-  <h2 class="card-title">Моя участь</h2>
-  
 
-  <div id="myCompetitions">
-    <div class="cabinet-small-muted">Завантаження участі…</div>
-  </div>
-</div>
+      <!-- МОЯ УЧАСТЬ -->
+      <div class="card">
+        <h2 class="card-title">Моя участь</h2>
+
+        <div id="myCompetitions">
+          <div class="cabinet-small-muted">Завантаження участі…</div>
+        </div>
+      </div>
 
       <!-- ДОСЯГНЕННЯ -->
       <div class="card">
@@ -437,9 +437,8 @@
 <!-- SP 3: Кабінет -->
 <script src="assets/js/cabinet.js"></script>
 
-<!-- SP 4: Моя участь -->
-<script src="assets/js/my_participation.js"></script>
-  
+<!-- ✅ my_participation.js прибрано, щоб не було конфлікту з cabinet.js -->
+
 <!-- SP 4: Досягнення команди -->
 <script src="assets/js/cabinet_achievements.js"></script>
 
