--- a/participation.html
+++ b/participation.html
@@ -25,6 +25,15 @@
   </div>
 </main>
 
+<!-- Firebase compat CDN -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+
+<!-- ЄДИНА ініціалізація -->
+<script src="assets/js/firebase-init.js"></script>
+
+<!-- Сторінка участі -->
 <script src="assets/js/participation.js"></script>
 </body>
 </html>
